--- a/gREM_ms_16072014_new.tex
+++ b/gREM_ms_16072014_new.tex
@@ -221,7 +221,7 @@ gREM submodel specifications were done by hand, and the integration was done usi
 
 \subsection{Simulation Model}
 
-We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. 100 simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries). A stationary sensor of radius $r$ was set up in the exact centre of each simulation, covering 7 sensor detection widths $\theta$ between 0 and $2\pi$( $2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, $2\pi$). Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}. This density was chosen as it is approximately the expected density of mammals animals weighing \SI{1}{\gram} calculated form the equation in \cite{damuth1981population}. This created a total of 3937 individuals per simulation which were placed randomly at the start of the simulation. Individuals were assigned 9 signal detection widths $\alpha$ between 0 and $\pi$ (x,x,x,x,x).
+We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. 100 simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries). A stationary sensor of radius $r$ was set up in the exact centre of each simulation, covering 7 sensor detection widths $\theta$ between 0 and $2\pi$( $2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, $2\pi$). Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}. This density was chosen as it is approximately the expected density of mammals animals weighing \SI{1}{\gram} calculated form the equation in \cite{damuth1981population}. This created a total of 3937 individuals per simulation which were placed randomly at the start of the simulation. Individuals were assigned 11 signal detection widths $\alpha$ between 0 and $\pi$ ($1/11\pi$,$2/11\pi$,$3/11\pi$,$4/11\pi$,$5/11\pi$,$6/11\pi$,$7/11\pi$,$8/11\pi$,$9/11\pi$,$10/11\pi$,$\pi$).
 
 Each simulation lasted for $N$ steps (xx) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), change direction (with a maximum angle, $A$) between 0 and $\pi$. This resulted in 7 different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2)stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$.  
 Individuals were counted as they moved in and out of the detection zone of the sensor per simulation. 
