New name, slight update

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-08-11 09:28:03 +0100 
+%% Created for Elizabeth Moorcroft at 2014-08-11 16:44:21 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{smouse2010stochastic,
+	Author = {Smouse, Peter E and Focardi, Stefano and Moorcroft, Paul R and Kie, John G and Forester, James D and Morales, Juan M},
+	Date-Added = {2014-08-11 15:44:19 +0000},
+	Date-Modified = {2014-08-11 15:44:19 +0000},
+	Journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+	Number = {1550},
+	Pages = {2201--2211},
+	Publisher = {The Royal Society},
+	Title = {Stochastic modelling of animal movement},
+	Volume = {365},
+	Year = {2010}}
 
 @article{schmidt2003count,
 	Author = {Schmidt, Benedikt R},
