--- a/gREM_ms_11082014.tex
+++ b/gREM_ms_11082014.tex
@@ -309,13 +309,15 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the  accurac
 We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citep{rowcliffe2008estimating} to be applicable to any combination of sensor width and signal directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. The precision of the gREM was found to be dependent on the width of the sensor and the call, and the number of captures.
 
 \subsection{Analytical model}
-The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in 8 different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study with noninvasive methods such as remove sensors. The gREM allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including bats, songbirds, Cetaceans and forest primates. 
+The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in 8 different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study with noninvasive methods such as remote sensors. The gREM allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including bats, songbirds, cetaceans and forest primates. 
 
-There are a number of positive extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving by substituting the sum of the average animal velocity and the sensor velocity for $v$ as used here. However, when the animal has a directional call, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur and as such may be advantage to have a method of estimating densities from the data collected, e.g. an acoustic detector based off a boat when studying Cetacea or sea birds \citep{yack2013passive}. Another interesting, and so far unstudied problem, is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) and time expansion acoustic detectors which repeatedly turn on an off during sampling. Both of these have potential biases as animals can move through the detection zone without being detected. The models herein are formulated assuming constant surveillance and so the error quickly becomes negligible. For example, if it takes longer for the recording device to be switched on than the length of some animal calls there could be a systematic underestimation of density.
+There are a number of possible extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving by substituting the sum of the average animal velocity and the sensor velocity for $v$ as used here. However, when the animal has a directional call, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur and as such may be advantage to have a method of estimating densities from the data collected, e.g. an acoustic detector based off a boat when studying Cetacea or sea birds \citep{yack2013passive}. 
+
+An interesting but unstudied problem is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) and time expansion acoustic detectors which repeatedly turn on an off during sampling. Both of these have potential biases as animals can move through the detection zone without being detected. The models herein are formulated assuming constant surveillance and so the error quickly becomes negligible. For example, if it takes longer for the recording device to be switched on than the length of some animal calls there could be a systematic underestimation of density.
 
 
 \subsection{Accuracy and Precision}
-We tested each of the gREM submodels for accuracy and precision through a simulation. All the submodels produced estimated densities that were not significantly different from the true density of the simulation. Therefore based on these simulations we believe that the gREM has the potential to produce accurate estimates for many different species, using either camera traps or acoustic detectors. However the precision of the gREM differed between submodels. For example, when the sensor and signal width were smaller then the precision of the model was reduced, so when choosing a sensor for use in a gREM study the detection width should be maximised, and if the study species has a narrow signal directionality other aspects of the study protocol should be used to compensate. 
+Based on our simulations we believe that the gREM has the potential to produce accurate estimates for many different species, using either camera traps or acoustic detectors. However the precision of the gREM differed between submodels. For example, when the sensor and signal width were smaller then the precision of the model was reduced, so when choosing a sensor for use in a gREM study the detection width should be maximised, and if the study species has a narrow signal directionality other aspects of the study protocol should be used to compensate. 
 
 The precision of the gREM is greatly affected by the number of captures that are collected, the coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At 100 captures the submodels reach 10\% coefficient of variation, and therefore we believe at this point the models are precise. The length of surveys in the field will need to be adjusted so that enough data is collected to reach this level of precision, populations of fast moving animals or populations with large densities will require less survey effort than those with slow moving or low densities. 
 
