--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,60 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-08-11 16:44:21 +0100 
+%% Created for Elizabeth Moorcroft at 2014-08-13 18:11:57 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{robinson1997home,
+	Author = {Robinson, MF and Stebbings, RE},
+	Date-Added = {2014-08-13 16:54:36 +0000},
+	Date-Modified = {2014-08-13 16:54:36 +0000},
+	Journal = {Journal of Zoology},
+	Number = {1},
+	Pages = {117--136},
+	Publisher = {Wiley Online Library},
+	Title = {Home range and habitat use by the serotine bat, Eptesicus serotinus, in England},
+	Volume = {243},
+	Year = {1997}}
+
+@article{lammers2003directionality,
+	Author = {Lammers, Marc O and Au, Whitlow WL},
+	Date-Added = {2014-08-13 15:36:16 +0000},
+	Date-Modified = {2014-08-13 15:36:16 +0000},
+	Journal = {Marine Mammal Science},
+	Number = {2},
+	Pages = {249--264},
+	Publisher = {Wiley Online Library},
+	Title = {Directionality in the whistles of Hawaiian spinner dolphins (Stenella longirostris): A signal feature to cue direction of movement?},
+	Volume = {19},
+	Year = {2003}}
+
+@article{ahlen1999use,
+	Author = {Ahlen, Ingemar and Baag{\o}e, Hans J},
+	Date-Added = {2014-08-13 11:18:27 +0000},
+	Date-Modified = {2014-08-13 11:18:27 +0000},
+	Journal = {Acta Chiropterologica},
+	Number = {2},
+	Pages = {137--150},
+	Publisher = {-},
+	Title = {Use of ultrasound detectors for bat studies in Europe: experiences from field identification, surveys, and monitoring},
+	Volume = {1},
+	Year = {1999}}
+
+@article{kimura2014acoustic,
+	Author = {Kimura, Satoko and Akamatsu, Tomonari and Dong, Lijun and Wang, Kexiong and Wang, Ding and Shibata, Yasutoki and Arai, Nobuaki},
+	Date-Added = {2014-08-13 11:11:21 +0000},
+	Date-Modified = {2014-08-13 11:11:21 +0000},
+	Journal = {The Journal of the Acoustical Society of America},
+	Number = {6},
+	Pages = {3364--3370},
+	Publisher = {Acoustical Society of America},
+	Title = {Acoustic capture-recapture method for towed acoustic surveys of echolocating porpoises},
+	Volume = {135},
+	Year = {2014}}
 
 @article{smouse2010stochastic,
 	Author = {Smouse, Peter E and Focardi, Stefano and Moorcroft, Paul R and Kie, John G and Forester, James D and Morales, Juan M},
