Changes based on Kate's comments

--- a/gREM_ms_11082014.tex
+++ b/gREM_ms_11082014.tex
@@ -313,13 +313,13 @@ The gREM was derived for different combinations of $\alpha$ and $\theta$ resulti
 
 There are a number of possible extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving by substituting the sum of the average animal velocity and the sensor velocity for $v$ as used here. However, when the animal has a directional call, as seen in both terrestrial and aquatic environments\citep{lammers2003directionality,blumstein2011acoustic}, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur and as such may be advantage to have a method of estimating densities from the data collected, e.g. an acoustic detector towed from a boat when studying porpoises \citep{kimura2014acoustic} or surveying bats from a moving car \citep{ahlen1999use}. 
 
-An interesting but unstudied problem is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) \citep{rovero2013camera} and time expansion acoustic detectors which repeatedly turn on an off during sampling \citep{ahlen1999use}. Both of these have potential biases as animals can move through the detection zone without being detected. The models herein are formulated assuming constant surveillance and so the error quickly becomes negligible if the sensor is on for extended periods of time. For example, if it takes longer for the recording device to be switched on than the length of some animal calls there could be a systematic underestimation of density.
+An interesting but unstudied problem is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) \citep{rovero2013camera} and time expansion acoustic detectors which repeatedly turn on an off during sampling \citep{ahlen1999use}. Both of these have potential biases as animals can move through the detection zone without being detected. The models herein are formulated assuming constant surveillance and so the error created by switching the camera on and off quickly becomes negligible if the sensor is on for extended periods of time. For example, if it takes longer for the recording device to be switched on than the length of some animal calls there could be a systematic underestimation of density.
 
 
 \subsection{Accuracy and Precision}
-Based on our simulations we believe that the gREM has the potential to produce accurate estimates for many different species, using either camera traps or acoustic detectors. However the precision of the gREM differed between submodels. For example, when the sensor and signal width were smaller then the precision of the model was reduced, so when choosing a sensor for use in a gREM study the detection width should be maximised, and if the study species has a narrow signal directionality other aspects of the study protocol should be used to compensate. 
+Based on our simulations we believe that the gREM has the potential to produce accurate estimates for many different species, using either camera traps or acoustic detectors. However the precision of the gREM differed between submodels. For example, when the sensor and signal width were smaller then the precision of the model was reduced, so when choosing a sensor for use in a gREM study the detection width should be maximised, and if the study species has a narrow signal directionality other aspects of the study protocol, such as length of the survey, should be used to compensate. 
 
-The precision of the gREM is greatly affected by the number of captures that are collected, the coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At 100 captures the submodels reach 10\% coefficient of variation, and therefore we believe at this point the models are precise. The length of surveys in the field will need to be adjusted so that enough data is collected to reach this level of precision, populations of fast moving animals or populations with large densities will require less survey effort than those with slow moving or low densities. 
+The precision of the gREM is greatly affected by the number of captures that are collected, the coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At 100 captures the submodels reach 10\% coefficient of variation, considered to a very good level of precision \citep{thomas2012passive}. Many current studies to not reach this level of precision, with most studies reporting coefficient of variations greater than the 10\% level \citep{o2003crouching, proctor2010ecological, foster2012critique}. The length of surveys in the field will need to be adjusted so that enough data is collected to reach this level of precision, populations of fast moving animals or populations with large densities will require less survey effort than those with slow moving or low densities. 
 
 The gREM was both accurate and precise for all the movement models we tested against, stop-start movement and correlated random walks. However these movement models are still simple representations of true animal movement which often consist of multiple be dependent on multiple factors such as behavioural state and and existence of home ranges \citep{smouse2010stochastic}. The accuracy of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little affect on the precision of the model (Figure \ref{f:Tort}). However if the ratio of step length to detection radius was smaller then this may decrease the precision of the model, however this should not decrease its accuracy. 
 
