--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-08-13 18:11:57 +0100 
+%% Created for Elizabeth Moorcroft at 2014-08-14 12:51:08 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{thomas2012passive,
+	Author = {Thomas, Len and Marques, Tiago A},
+	Date-Added = {2014-08-14 11:11:57 +0000},
+	Date-Modified = {2014-08-14 11:11:57 +0000},
+	Journal = {Acoustics Today},
+	Number = {3},
+	Pages = {35--44},
+	Publisher = {Acoustical Society of America},
+	Title = {Passive acoustic monitoring for estimating animal density},
+	Volume = {8},
+	Year = {2012}}
+
+@article{proctor2010ecological,
+	Author = {Proctor, Michael and McLellan, Bruce and Boulanger, John and Apps, Clayton and Stenhouse, Gordon and Paetkau, David and Mowat, Garth},
+	Date-Added = {2014-08-14 10:41:22 +0000},
+	Date-Modified = {2014-08-14 10:41:22 +0000},
+	Journal = {Ursus},
+	Number = {2},
+	Pages = {169--188},
+	Publisher = {BioOne},
+	Title = {Ecological investigations of grizzly bears in Canada using DNA from hair, 1995-2005: a review of methods and progress},
+	Volume = {21},
+	Year = {2010}}
 
 @article{robinson1997home,
 	Author = {Robinson, MF and Stebbings, RE},
