Updates to the MS inline with KJ comments

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,81 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-08-14 12:51:08 +0100 
+%% Created for Elizabeth Moorcroft at 2014-08-15 13:33:12 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{sollmann2013using,
+	Author = {Sollmann, Rahel and Gardner, Beth and Chandler, Richard B and Shindle, David B and Onorato, David P and Royle, Jeffrey Andrew and O'Connell, Allan F},
+	Date-Added = {2014-08-15 11:41:01 +0000},
+	Date-Modified = {2014-08-15 11:41:01 +0000},
+	Journal = {Journal of Applied Ecology},
+	Number = {4},
+	Pages = {961--968},
+	Publisher = {Wiley Online Library},
+	Title = {Using multiple data sources provides density estimates for endangered Florida panther},
+	Volume = {50},
+	Year = {2013}}
+
+@article{kelly2012noninvasive,
+	Author = {Kelly, Marcella J and Betsch, Julie and Wultsch, Claudia and Mesa, Bernardo and Mills, L Scott},
+	Date-Added = {2014-08-15 10:48:41 +0000},
+	Date-Modified = {2014-08-15 10:48:41 +0000},
+	Journal = {Carnivore ecology and conservation: a handbook of techniques (L. Boitani and RA Powell, eds.). Oxford University Press, New York},
+	Pages = {47--69},
+	Title = {Noninvasive sampling for carnivores},
+	Year = {2012}}
+
+@article{jewell2013effect,
+	Author = {Jewell, Zoe},
+	Date-Added = {2014-08-15 10:26:32 +0000},
+	Date-Modified = {2014-08-15 10:26:32 +0000},
+	Journal = {Conservation Biology},
+	Number = {3},
+	Pages = {501--508},
+	Publisher = {Wiley Online Library},
+	Title = {Effect of monitoring technique on quality of conservation science},
+	Volume = {27},
+	Year = {2013}}
+
+@article{clement2013estimating,
+	Author = {Clement, Matthew J and Castleberry, Steven B},
+	Date-Added = {2014-08-15 10:07:22 +0000},
+	Date-Modified = {2014-08-15 10:07:22 +0000},
+	Journal = {Population Ecology},
+	Number = {1},
+	Pages = {205--215},
+	Publisher = {Springer},
+	Title = {Estimating density of a forest-dwelling bat: a predictive model for Rafinesque's big-eared bat},
+	Volume = {55},
+	Year = {2013}}
+
+@article{crespo2010abundance,
+	Author = {Crespo, Enrique A and Pedraza, Susana N and Grandi, M Florencia and Dans, Silvana L and Garaffo, Griselda V},
+	Date-Added = {2014-08-15 09:48:44 +0000},
+	Date-Modified = {2014-08-15 09:48:44 +0000},
+	Journal = {Marine Mammal Science},
+	Number = {1},
+	Pages = {17--35},
+	Publisher = {Wiley Online Library},
+	Title = {Abundance and distribution of endangered Franciscana dolphins in Argentine waters and conservation implications},
+	Volume = {26},
+	Year = {2010}}
+
+@article{jirinec2011roosting,
+	Author = {Jirinec, Vitek and Campos, Brent R and Johnson, Matthew D},
+	Date-Added = {2014-08-15 09:23:24 +0000},
+	Date-Modified = {2014-08-15 09:23:24 +0000},
+	Journal = {Bird Conservation International},
+	Number = {03},
+	Pages = {353--361},
+	Publisher = {Cambridge Univ Press},
+	Title = {Roosting behaviour of a migratory songbird on Jamaican coffee farms: landscape composition may affect delivery of an ecosystem service},
+	Volume = {21},
+	Year = {2011}}
 
 @article{thomas2012passive,
 	Author = {Thomas, Len and Marques, Tiago A},
