--- a/gREM_ms_11082014.tex
+++ b/gREM_ms_11082014.tex
@@ -16,7 +16,7 @@
 %\fancyhf{}
 \lhead{}
 \rhead{}
-\chead{Lucas \emph{et al.}: A generalised random encounter model for animals}
+\chead{Lucas \emph{et al.} A generalised random encounter model for animals}
 \cfoot{\footnotesize{\thepage}}
 \pagestyle{fancy}    
 
@@ -211,11 +211,11 @@ Rather than having one equation that describes $\bar{p}$ globally, the gREM must
 
 As a visual example, if $\alpha$ is small, there is an interval between Fig.~\ref{f:secondInt} and \ref{f:thirdInt} where the `blind spot' would prevent animals being detected at all giving $p=0$. This would require an extra integral in our equation as simply putting our small value of $\alpha$ into \ref{e:SE2int} would not give us this integral of $p=0$.
 
-gREM submodel specifications were done by hand, and the integration was done using SymPy \citep{sympy} in Python (Appendix S3). The gREM submodels were checked by confirming that: 1) submodels adjacent in parameter space were equal at the boundary between them; 2) submodels that border $ \alpha = 0$ had$p = 0$ when $ \alpha = 0$; 3) average profile widths $\bar{p}$ were between 0 and $2r$ and; 4) each integral, divided by the range of angles that it was integrated over, was between 0 and $2r$. The scripts for these tests are included in Appendix S3 and the R \citep{R} implementation of the gREM is given in Appendix S4.  
+gREM submodel specifications were done by hand, and the integration was done using SymPy \citep{sympy} in Python (Appendix S3). The gREM submodels were checked by confirming that: (1) submodels adjacent in parameter space were equal at the boundary between them; (2) submodels that border $ \alpha = 0$ had$p = 0$ when $ \alpha = 0$; (3) average profile widths $\bar{p}$ were between 0 and $2r$ and; (4) each integral, divided by the range of angles that it was integrated over, was between 0 and $2r$. The scripts for these tests are included in Appendix S3 and the R \citep{R} implementation of the gREM is given in Appendix S4.  
 
 \subsection{Simulation Model}
 
-We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. 100 simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries). A stationary sensor of radius $r$ was set up in the exact centre of each simulation, covering 7 sensor detection widths $\theta$ between 0 and $2\pi$ ($2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, $2\pi$). Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}, calculated from the equation in \cite{damuth1981population} as the expected density of mammals of weighing \SI{1}{\gram}. This density therefore represents the highest likely density of indivudals, given that the smallest mammal is around \SI{2}{\gram} \cite{jones2009pantheria}. A total of 3937 individuals per simulation were created which were placed randomly at the start of the simulation. Individuals were assigned 11 signal detection widths $\alpha$ between 0 and $\pi$ ($1/11\pi$, $2/11\pi$, $3/11\pi$, $4/11\pi$, $5/11\pi$, $6/11\pi$, $7/11\pi$, $8/11\pi$, $9/11\pi$, $10/11\pi$, $\pi$).
+We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. 100 simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries). A stationary sensor of radius $r$ was set up in the exact centre of each simulation, covering 7 sensor detection widths $\theta$ between 0 and $2\pi$ ($2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, $2\pi$). Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}, calculated from the equation in \cite{damuth1981population} as the expected density of mammals of weighing \SI{1}{\gram}. This density therefore represents the highest likely density of indivudals, given that the smallest mammal is around \SI{2}{\gram} \citep{jones2009pantheria}. A total of 3937 individuals per simulation were created which were placed randomly at the start of the simulation. Individuals were assigned 11 signal detection widths $\alpha$ between 0 and $\pi$ ($1/11\pi$, $2/11\pi$, $3/11\pi$, $4/11\pi$, $5/11\pi$, $6/11\pi$, $7/11\pi$, $8/11\pi$, $9/11\pi$, $10/11\pi$, $\pi$).
 
 Each simulation lasted for $N$ steps (14400) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), change direction (with a maximum angle, $A$) between 0 and $\pi$. This resulted in 7 different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2) stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$. Individuals were counted as they moved in and out of the detection zone of the sensor per simulation. 
 
@@ -265,7 +265,7 @@ All gREM submodels showed a high accuracy, i.e., the mean difference between the
 
 \subsubsection{Number of captures}
 
-Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the  accuracy was not affected by the number of captures, where the mean difference between the estimated and actual values was not significantly different from zero across all capture rates, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test, p \textgreater 0.008)(Figure~\ref{f:Captures}). However, the precision was dependent on the number of captures across all four of the gREM submodels, where precision increases as number of captures increases(Figure~\ref{f:Captures}). For all gREM submodels, the the coefficient of variation falls to 10\% at 100 captures. 
+Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the  accuracy was not affected by the number of captures, where the mean difference between the estimated and actual values was not significantly different from zero across all capture rates, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test, p \textgreater 0.008)(Figure~\ref{f:Captures}). However, the precision was dependent on the number of captures across all four of the gREM submodels, where precision increases as number of captures increases (Figure~\ref{f:Captures}). For all gREM submodels, the the coefficient of variation falls to 10\% at 100 captures. 
 
 \begin{figure}[t]
        \centering
@@ -309,9 +309,9 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the  accurac
 We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citet{rowcliffe2008estimating} to be applicable to any combination of sensor width and signal directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. The precision of the gREM was found to be dependent on the width of the sensor and the call, and the number of captures.
 
 \subsection{Analytical model}
-The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in eight different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study, such as bats \citep{robinson1997home}, with noninvasive methods such as remote sensors. The gREM allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including songbirds \citep{blumstein2011acoustic}, and dolphins \citep{lammers2003directionality}. 
+The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in eight different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study, such as bats \citep{clement2013estimating}, with noninvasive methods such as remote sensors. The gREM allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including songbirds \citep{blumstein2011acoustic}, and dolphins \citep{lammers2003directionality}. 
 
-There are a number of possible extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving by substituting the sum of the average animal velocity and the sensor velocity for $v$ as used here. However, when the animal has a directional call, as seen in both terrestrial and aquatic environments\citep{lammers2003directionality,blumstein2011acoustic}, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur and as such may be advantage to have a method of estimating densities from the data collected, e.g. an acoustic detector towed from a boat when studying porpoises \citep{kimura2014acoustic} or surveying bats from a moving car \citep{ahlen1999use}. 
+There are a number of possible extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and detector, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded for moving by substituting the sum of the average animal velocity and the sensor velocity for $v$ as used here. However, when the animal has a directional call, as seen in both terrestrial and aquatic environments  \citep{lammers2003directionality,blumstein2011acoustic}, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur and as such may be advantage to have a method of estimating densities from the data collected, e.g. an acoustic detector towed from a boat when studying porpoises \citep{kimura2014acoustic} or surveying bats from a moving car \citep{ahlen1999use}. 
 
 An interesting but unstudied problem is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) \citep{rovero2013camera} and time expansion acoustic detectors which repeatedly turn on an off during sampling \citep{ahlen1999use}. Both of these have potential biases as animals can move through the detection zone without being detected. The models herein are formulated assuming constant surveillance and so the error created by switching the camera on and off quickly becomes negligible if the sensor is on for extended periods of time. For example, if it takes longer for the recording device to be switched on than the length of some animal calls there could be a systematic underestimation of density.
 
@@ -323,14 +323,14 @@ The precision of the gREM is greatly affected by the number of captures that are
 
 The gREM was both accurate and precise for all the movement models we tested against, stop-start movement and correlated random walks. However these movement models are still simple representations of true animal movement which often consist of multiple be dependent on multiple factors such as behavioural state and and existence of home ranges \citep{smouse2010stochastic}. The accuracy of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little affect on the precision of the model (Figure \ref{f:Tort}). However if the ratio of step length to detection radius was smaller then this may decrease the precision of the model, however this should not decrease its accuracy. 
 
-Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture mark recapture. Where these gold standard exist, and have been proved to work, a simultaneous gREM study could be completed to test the accuracy under field conditions. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
+Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture mark recapture \citep{sollmann2013using}. Where these gold standard exist or true numbers are known, a simultaneous gREM study could be completed to test the accuracy under field conditions, similar to the tests that \citet{rowcliffe2008estimating} completed with the REM. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
 
 Within the simulation we have assumed an equal density across the entire world, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between camera sites. We allowed the sensor to be stationary and on all the time, negating the triggering, and time expansion issues that could exist in real life. In the simulation we ran the speed of the animal as  $\SI{40}{\kilo\meter \per \day}$, the largest day range of terrestrial animals \citep{carbone2005far}, other speed values should not alter the accuracy or the precision of the gREM. We also assume perfect knowledge of the average speed of an animal and size of the detection zone, and instant triggering of the camera. All of which may lead to possible bias or a decrease in precision. 
 
 \subsection{Implications for conservation}
-The gREM is therefore available for the estimation of density of a number of taxa of importance to conservation, zoonotic diseases and ecosystem services. The models provided are suitable for certain groups for which there are currently no, or few, effective methods for density estimation. Any species that would be consistently recorded at least once when within range of a detector would be a suitable subject for the gREM, such as bats \citep{kunz2009methods}, songbirds \citep{buckland2006point}, whales \citep{marques2009estimating} or forest primates \citep{hassel2008reliable}. Within increasing technological capabilities, this list of species is likely to increase dramatically.
+The gREM is therefore available for the estimation of density of a number of taxa where no, or few, accurate methods currently exist to measure absolute animal density \citep{thomas2012passive}. The species that can now be studied may be of importance to conservation, for example current methods of density estimation for the threatened Francisana dolphin may result in underestimation of numbers \citep{crespo2010abundance}. This new methods may be important for the study of zoonotic diseases, for example estimating bat population size, which have previously been difficult to study\citep{robinson1997home}, but are important reservoir of infectious disease that effect humans, livestock and wildlife \citep{calisher2006bats}. In addition, the gREM will make it possible to measure the density of animals may be useful in ecosystem services, such as studying the levels of songbirds which are known to have a positive influence on pest control in coffee production \citep{jirinec2011roosting}. The gREM is suitable for any species that would be consistently recorded at least once when within range of a detector, such as bats \citep{kunz2009methods}, songbirds \citep{buckland2006point}, whales \citep{marques2009estimating} or forest primates \citep{hassel2008reliable}. Within increasing technological capabilities, this list of species is likely to increase dramatically.
 
-Importantly the methods are noninvasive and do not require human marking or naturally identifying marks (as required for mark-recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources. It also makes them suitable for species that are under pressure, species that cannot naturally be individually recognised or species that are difficult or dangerous to catch.
+Importantly the of camera trapping and acoustically recording that the gREM use are noninvasive and do not require human marking  \citep{jewell2013effect} or naturally identifying marks (as required for mark-recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources \citep{kelly2012noninvasive}. It also makes them suitable for species that are under pressure, species that cannot naturally be individually recognised or species that are difficult or dangerous to catch \citep{thomas2012passive}.
 
 
 %%%% ------- Acknowledgments ---------%%%%
